Fix y axis overflow on empty screen Fixes #15

--- a/src/components/Tracklist/styles.module.css
+++ b/src/components/Tracklist/styles.module.css
@@ -1,9 +1,4 @@
 .TrackList {
-  /* background: #ffd89b; /* fallback for old browsers */
-  /* background: -webkit-linear-gradient(to right, #19547b, #ffd89b);
-  background: linear-gradient(to right, #19547b, #ffd89b);  */
+  flex: 1;
   background: #002651;
-  width: 100%;
-  height: 60vh;
-  overflow-y: scroll;
 }
